# UltraRAG

./: .gitignore  AGENTS.md  Dockerfile.v3-dev  GIANT  README.md  docs.json  pyproject.toml  test_citation_registry_fix.py
.github/workflows/: dockerhub-nightly.yml
agentcpm-report-demo/: README-Docker.md  docker-compose.cpu.yml  docker-compose.yml  env.example
agentcpm-report-demo/scripts/: download_gguf.py
blog/cn/: ultrarag3_0.md
blog/en/: ultrarag3_0.md
data/label_update/origin_data/: origin_one_two_label.json  part_data.json
docker/: .env.cpu.example  .env.example  README.md  docker-compose.cpu.yml  docker-compose.yml
docker/config/: kb_config.json
docs/: README-English.md  README_ja.md  README_zh.md  llms.txt  openai-backend.md
examples/: corpus_index_label.yaml  corpus_label_data_index.yaml  corpus_label_new_data_update.yaml  corpus_label_update.yaml  evisrag.yaml  light_research_absolute_citation.yaml  minimax_rag.yaml  rag_absolute_citation.yaml  surveycpm.yaml  surveycpm_no_extend.yaml  webnote_label.yaml
examples/demos/: AgentCPM-Report.yaml
examples/experiments/: qdrant_index.yaml
examples/parameter/: corpus_chunk_parameter.yaml  minimax_generation_parameter.yaml
pages/cn/api/: corpus.mdx
prompt/: label_classify.jinja  label_desc.jinja  label_merge.jinja  label_new_classify.jinja  label_one_two_classify.jinja
rag-paper-daily/: README.md
script/: deploy_retriever_config.json  ui_entrypoint.sh  vllm_serve.sh
servers/corpus/: parameter.yaml
servers/custom/: parameter.yaml
servers/generation/: parameter.cpu.yaml  parameter.yaml
servers/prompt/: parameter.yaml
servers/retriever/: parameter.cpu.yaml  parameter.yaml
src/ultrarag/: client.py  server.py
tests/: test_ai_base_url_validation.py  test_minimax_generation.py  test_minimax_integration.py
ui/backend/: _ai_base_url.py  app.py  pipeline_manager.py  storage_migration.py  storage_paths.py
ui/frontend/: index.html  main.js  package-lock.json  package.json  style.css
(+61 files in other folders)
